--- a/Shape.Model/Shape.Model.csproj
+++ b/Shape.Model/Shape.Model.csproj
@@ -12,12 +12,20 @@
 		<Reference Include="Vector.Lib">
 			<HintPath>..\..\vector-lib\Vector.Lib\bin\Debug\net6.0\Vector.Lib.dll</HintPath>
 		</Reference>
+        <Reference Include="Sim.Core">
+			<HintPath>..\..\sim-core\Sim.Core\bin\Debug\net6.0\Sim.Core.dll</HintPath>
+		</Reference>
 	</ItemGroup> -->
 
 	<!-- Release refs -->
 	<ItemGroup>
 		<Reference Include="Vector.Lib">
 			<HintPath>..\..\..\Build\vector-lib\Vector.Lib\Vector.Lib.dll</HintPath>
+		</Reference>
+	</ItemGroup>
+    <ItemGroup>
+		<Reference Include="Sim.Core">
+			<HintPath>..\..\..\Build\sim-core\Sim.Core\Sim.Core.dll</HintPath>
 		</Reference>
 	</ItemGroup>
 </Project>
